# Mapsi

./: .gitignore  COMPARISON_REPORT.md  CONTRIBUTORS.md  LICENSE  README.md  VALIDATION_REPORT.md  extract_styles.py  pyproject.toml  streamlit_app.py  validate_xml.py
docs/: architecture.md  c_handoff.md  developer_handoff.md  module_map.md  presentation_brief.md  project_plan.md
docs/decisions/: 0001-table-caption-promotion.md  0002-equation-marker-mode.md  0003-integrate-team-c.md  0004-inline-formatting.md  0005-cp4-integration-golden.md  0007-bibtex-support.md  0008-equation-xml-mode.md
mapsi/: __init__.py  __main__.py  ast_walker.py  cli.py  config.py  converter.py  inline_styles.py  inspect.py  packager.py  parser.py  styles.py
mapsi/math/: hnc.py  (+4 more)
scripts/: make_chart_example.py  make_demo_images.py  make_hwpx_assembly_diagram.py  make_hwpx_zip_concept.py  make_image_not_found.py
spec/: interfaces.md  styles.yaml
tests/: README.md  _golden.py  conftest.py  test_ast_walker.py  test_ast_walker_citations.py  test_bibliography_formatter.py  test_bibliography_parser.py  test_bibtex_integration.py  test_bindata.py  test_cli.py  test_config.py  test_converter_images.py  test_elements.py  test_equation_builder.py  test_front_matter.py  test_golden.py  test_golden_01_headings.py  test_golden_helper.py  test_header.py  test_hnc.py  test_inline_styles.py  test_inspect.py  test_latex_parser.py  test_manifest.py  test_math.py  test_packager.py  test_parser.py  test_parser_citations.py  test_section_spacing.py  test_smoke.py  test_styles.py  test_unsupported_marker.py
(+119 files in other folders)
