[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapsi"
version = "0.1.0.dev0"
description = "Markdown Adapter for Paragraph-Style Injection — 마크다운을 한/글 HWPX 로 맵시 있게 변환"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mapsi Team" },
]
keywords = ["markdown", "hwpx", "hancom", "hwp", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
]
dependencies = [
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.34",
    "openai>=1.40",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mapsi = "mapsi.cli:main"

[project.urls]
Repository = "https://github.com/your-org/mapsi"

[tool.setuptools.packages.find]
include = ["mapsi*"]
exclude = ["tests*", "samples*", "spec*", "templates*", "docs*"]

[tool.setuptools.package-data]
mapsi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
